# alsaseq-tui

./: Cargo.toml  README.md
src/: app.rs  config.rs  main.rs  ports.rs  service.rs  ui.rs
